NATTQA-ENV/force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__AggregateField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AggregateField__c</fullName>
    <description>Quote Line field that&apos;s acted upon by the aggregate function.</description>
    <inlineHelpText>Quote Line field that&apos;s acted upon by the aggregate function.</inlineHelpText>
    <label>Aggregate Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>SBQQ__Bundle__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_List_Price__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_STD_Cost__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__Quantity__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Base_Weight__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__ProductCode__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Option_Type__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__NetPrice__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__OriginalPrice__c</fullName>
            </value>
            <value>
                <fullName>NATT_Miles__c</fullName>
            </value>
            <value>
                <fullName>NATT_Extended_Basic_Price__c</fullName>
            </value>
            <value>
                <fullName>NATT_Optional_Coverage_Months__c</fullName>
            </value>
            <value>
                <fullName>NATT_Optional_Coverage_Hours__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__TotalDiscountRate__c</fullName>
            </value>
            <value>
                <fullName>NATT_Major_Component_Hours__c</fullName>
            </value>
            <value>
                <fullName>NATT_Extended_Basic_Months__c</fullName>
            </value>
            <value>
                <fullName>NATT_Major_Component_Months__c</fullName>
            </value>
            <value>
                <fullName>NATT_Extended_Basic_Hours__c</fullName>
            </value>
            <value>
                <fullName>NATT_Extended_Basic_Price_Subtraction__c</fullName>
            </value>
            <value>
                <fullName>NATT_Price_Per_Hour_End_Customer__c</fullName>
            </value>
            <value>
                <fullName>NATT_Net_End_Customer_Price__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>