NATTQA-ENV/force-app/main/default/objects/SBQQ__SummaryVariable__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FilterField__c</fullName>
    <description>Items that are filtered for inclusion in this summary variable.</description>
    <inlineHelpText>Select the field to use when filtering items for inclusion in this summary variable.</inlineHelpText>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Code</fullName>
            </value>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>SBQQ__Bundle__c</fullName>
            </value>
            <value>
                <fullName>NATT_P_N__c</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Option_Type__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__RequiredBy__c</fullName>
            </value>
            <value>
                <fullName>NATT_Coverage_Type__c</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Price_Type__c</fullName>
            </value>
            <value>
                <fullName>NATT_Is_Base_Unit__c</fullName>
            </value>
            <value>
                <fullName>SBQQ__ProductName__c</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Price_Rollup__c</fullName>
            </value>
            <value>
                <fullName>NATT_Grouped_By_Line_Number__c</fullName>
            </value>
            <value>
                <fullName>NATT_Unit__c</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Elite_Enhance_Rollup__c</fullName>
            </value>
            <value>
                <fullName>NATT_Use_Extended_Major_Summary_Variabl__c</fullName>
            </value>
            <value>
                <fullName>NATT_Core_Rollup__c</fullName>
            </value>
            <value>
                <fullName>NATT_Price_Per_Hour_End_Customer__c</fullName>
            </value>
            <value>
                <fullName>NATT_EMCC__c</fullName>
            </value>
            <value>
                <fullName>Host_Unit__c</fullName>
            </value>
            <value>
                <fullName>CTM_Special_Unit__c</fullName>
            </value>
            <value>
                <fullName>isEquipment__c</fullName>
            </value>
            <value>
                <fullName>CTBR_Unit__c</fullName>
            </value>
            <value>
                <fullName>NATT_RequiredByProductName__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>